fixes issue where timestamps amount would truncate

--- a/src/components/ListCard/style.less
+++ b/src/components/ListCard/style.less
@@ -71,7 +71,7 @@
         p {
           font-family: "Montserrat Alternates";
           font-size: 1.2rem;
-          font-weight: 700;
+          font-weight: 600;
           font-style: italic;
           letter-spacing: -.02rem;
           color: @sec-dark;
